Testando o Git Bash

--- a/teste.html
+++ b/teste.html
@@ -42,6 +42,22 @@
 					<label class="tel">Telefone</label>
 					<input type="tel" maxlength="15" size="15" name="fFone" placeholder="(xx)xxxx-xxxx" required>
 				</span>	
+
+				<span>	
+					<label class="cel">Celular</label>
+					<input type="text" maxlength="10" size="9" name="fCep" placeholder="xxxx-xxxx" pattern="\d{5}-?\d{3}"required><br><br>
+				</span>	
+
+				<div>
+					<label class="rg">Rg</label>
+						<input type="text" maxlength="10" size="15" name="rg" placeholder="xxxxxxxx" pattern="\d{5}-?\d{3}"required>
+						<br><br>
+
+					<label class="cpf">Cpf</label>
+						<input type="text" maxlength="10" size="15" name="cpf" placeholder="xxx.xxx.xxx.xx" pattern="\d{5}-?\d{3}"required>
+						<br><br>
+				</div>	
+		
 			<label class="end">Endereço</label>
 			<textarea  name="Endereço" cols="39" rows="6"></textarea><br><br>
 
