Testando o git clone

--- a/teste.html
+++ b/teste.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 	
+		<h1>Testando o git </h1>
+		<h2>Estudando o git</h2>
+
 		<input type="submit" value="Slavar" class="botao1">			
 		<input type="reset" value="Cancelar" class="botao"><br>
 
